more asset link updates

--- a/public/index.html
+++ b/public/index.html
@@ -17,12 +17,12 @@
     <meta name="keywords" content="game of life"/>
     <meta property="og:title" content="Game of Life - freeCodeCamp Challenge"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:image" content="https://fcc-game-of-life.herokuapp.com/thumbnail.png"/>
-    <meta property="og:url" content="https://fcc-game-of-life.herokuapp.com/"/>
+    <meta property="og:image" content="%PUBLIC_URL%/thumbnail.png"/>
+    <meta property="og:url" content="%PUBLIC_URL%/"/>
     <meta property="og:site_name" content="Game of Life - freeCodeCamp Challenge"/>
     <meta property="og:description" content="A solution to the Game of Life Challenge by @Virtual on GitHub"/>
     <meta property="og:locale" content="en_us"/>
-    <link rel="image_src" href="https://fcc-game-of-life.herokuapp.com/thumbnail.png"/>
+    <link rel="image_src" href="%PUBLIC_URL%/thumbnail.png"/>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
